--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <div id="menu">
+<li>Ariel Zilber | אריאל זילבר</li>
 <li><a href="#about">About Me</a></li>
 <li><a href="#photos">My Photos</a></li>
 <li><a href="#playlist">My Playlist</a></li>
@@ -19,45 +20,39 @@
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-about me
-<br/>
-<br/>
-<br/>
+<h1>About Me</h1>
+<p>אריאל זילבר (נולד ב-22 בספטמבר 1943; כ"ב באלול תש"ג) הוא פרופורמר ענק, מלחין ופזמונאי ישראלי.
+  זילבר נולד בתל אביב לזמרת ברכה צפירה ולכנר התזמורת הפילהרמונית הישראלית בן עמי זילבר (בנו של הצייר אריה זילבר, ושרה זילבר ממייסדי תל אביב). גדל כילד חוץ בקיבוץ גן שמואל ובנעוריו למד בפנימיית "הדסים".
+  
+  בשנת 1967 נדד בין אנגליה לצרפת, בהופעותיו הראשונות היה החימום של מייק בראנט באולמפיה יחד עם חיים רומנו שמאוחר יותר יעבוד איתו על האלבום האגדי רוצי שמוליק. בראשית שנות ה-70 שהה זילבר לסירוגין בישראל ובצרפת כשהוא כותב למבצעים שונים.
+  
+  בישראל כתב עבור הגשש החיוור, תיקי דיין, אילנה רובינא ואחרים, ובצרפת עבור פרנסואז הרדי. באנגליה ביצעו מיצירותיו צמד העופרים.
+  
+  בשנת 1971 הקליט תקליטון בכורה בצרפת ובו שני שירים: "Movie instead" ו-"When it's time". התקליטון שהיה בשפה האנגלית ,לא זכה לפריצה המיוחלת בצרפת, אך "Movie instead", שהיה שיר רוק פרוע ביחס למקובל בישראל, זכה להצלחה במצעד הפזמונים הלועזיים בישראל. הצלחה שאריאל לא ידע עליה כלל, כשנחת בארץ לביקור מולדת, הופתע לגלות כי בנמל התעופה חיכתה לו עדת מעריצות.
+  
+  בשנת 1973 שב לישראל לצמיתות, אחרי שגנז את הרעיון להקליט את האלבום הראשון שלו בצרפת. אריאל זילבר המשיך לנדוד אך רק ברחבי ארץ ישראל. כששב לארץ התגורר בתל אביב משם עבר לנס ציונה שם פגש את שימי תבורי רגע לפני הפריצה הגדולה שלו, משם עבר להתגורר בהוד השרון, רעננה, שוב תל אביב, מתת בגליל המערבי, תל אביב ושוב מתת, אלי סיני, מתת מעלות, מתת נהריה ולאחרונה עבר למושב גיתית בבקעת הירדן.
+  
+  התנועתיות הרבה ניכרת גם ביצירתו העניפה. בשנת 1974 הקים את להקת תמוז בתחילה עם מתי כספי, שויתר על הרעיון ובסופו של יום הלהקה הוקמה כשחברים בה אריאל זילבר, שלום חנוך, איתן גדרון, יהודה אדר ומאיר ישראל.
+  שירי הלהקה היוו אבני היסוד של הרוק הישראלי – "הולך בטל", "ככה את רצית אותי", " סוף עונת התפוזים", "פנס הרחוב", "אהבה שקטה".
+  
+  בשנת 1976, להקת תמוז התפרקה, זילבר יצא למסע הופעות בעקבות הצלחה עצומה של התקליט "רוצי שמוליק", אלבומו הראשון, שנמכר בעשרות אלפי עותקים, ארוע שלא התרחש לפני ואחרי במהלך שנים רבות.</p>
 </section>
+
 
 <section id="photos" class="section">
 <br/>
 <br/>
 <br/>
 <br/>
+<h1>My Photos</h1>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my photos
-<br/>
-<br/>
-<br/>
+<ul>
+  <li><img src="1.png" width="385px"/></li>
+  <li><img src="2.png" width="280px"/></li>
+  <li><img src="3.png" width="261px"/></li>
+  <li><img src="4.png" width="171px"/></li>
+  <li><img src="5.png" width="317px"/></li>
+</ul>
 </section>
 
 <section id="playlist" class="section">
@@ -65,22 +60,13 @@ my photos
 <br/>
 <br/>
 <br/>
+<h1>My Playlist</h1>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
-<br/>
-<br/>
-<br/>
+<ul>
+  <li><iframe width="416" height="234" src="https://www.youtube.com/embed/XHzgmt19tlU" frameborder="0" allowfullscreen></iframe></li>
+  <li><iframe width="416" height="234" src="https://www.youtube.com/embed/nwTv6bIZKlo" frameborder="0" allowfullscreen></iframe></li>
+  <li><iframe width="416" height="234" src="https://www.youtube.com/embed/DBawksKlj7I" frameborder="0" allowfullscreen></iframe></li>
+</ul>
 </section>
 
 <section id="like" class="section">
@@ -88,22 +74,10 @@ my playlist
 <br/>
 <br/>
 <br/>
+<h1>Give Me a Like</h1>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
-<br/>
-<br/>
-<br/>
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fweb-development-environments-2023.github.io%2F208373274%2F&width=450&layout&action&size&share=false&height=35&appId" width="450" height="35" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 </section>
 
 <section id="qrcoder" class="section">
@@ -111,65 +85,65 @@ give me a like
 <br/>
 <br/>
 <br/>
+<h1>Scan My Code</h1>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-scan my code
-<br/>
-<br/>
-<br/>
+<img src="qrcode.png" width="230px"/><br/>
 </section>
 
 <section id="spa" class="section">
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-ans
-<br/>
-<br/>
+<h1>Answers</h1>
+<ol>
+  <li>
+    <ol type="i">
+      <p id="firstquestion"><strong>שלושה הבדלים עיקריים בין תקופות ה-WEB השונות:</strong></p>
+      <li><p><strong>דינאמיות:</strong> WEB 1 הציג אתרים סטטיים בעלי יכולות עיבוד נמוכות, בתור משתמש לא היה ניתן ליצור אינטראקציה ולקבל תגובה, עודכנו לעיתים רחוקות. WEB 2 הביאה עימה טכנולוגיות עיבוד מידע מתקדמות יותר ואפשרה דינאמיות מסוימת באתרים. בתקופת WEB 3 ישנו שימוש בעיבוד נתוני עתק, שימוש בטכנולוגיות בינה מלאכותית ו-IoT ובכך מאפשרת גמישות והתאמה אישית של אפליקציות ושירותים למשתמש שמתעדכנת ומשתפרת כל הזמן.</p></li>
+      <li><p><strong>ביזור:</strong> בתקופת WEB 1 מערכת האינטרנט הוחזקה ורוכזה על ידי מספר מועט של תאגידים וארגונים ששלטו על התוכן שלה. WEB 2 הביאה איתה את הקונספט של מרחב שיתופי וחברתי באמצעות יצירה והפצה של תוכן על ידי המשתמשים עצמם. WEB 3 ממשיכה ומפתחת את הרעיון שמרחב האינטרנט שייך למשתמשים עצמם – תקופה זו מדברת על נגישות מקסימלית לאפליקציות ושירותים הניתנים באמצעות טכנולוגיות ביזור בין משתמשים וחברות כמו Cloud למשל.</p></li>
+      <li><p><strong>חיפוש באינטרנט:</strong> בתקופת WEB 1 לא היו טכנולוגיות כמו מנועי חיפוש ועיבוד שפה, היה צורך להכיר אתר ספציפי ולגשת אליו ישירות דרך ה-URL שלו. בתקופת WEB 2 התחילו להתקיים טכנולוגיות חיפוש מידע באתרים כמו Google אך החיפוש נעשה ברמה נמוכה ולא מקיפה – היה אפשר לחפש מילים ותוכן ספציפי שחייב שיופיע באתרים אך לא לקבל תשובות קונקרטיות וקונטקסטים. בתקופת WEB 3 כבר מדובר בחיפוש מידע מאוד ממוקד ויעיל מבחינת תוכן – טכנולוגיות בינה מלאכותית ו-NLP מציגות את התוצאות הטובות והנכונות ביותר ברשת לאחר שעברו עיבודים ומיקודים.</p></li>   
+    </ol>
+    <li><p><strong>דוגמא לתרחיש שימוש הממחיש את ההבדל בין התקופות:</strong> סטודנט להנדסת מערכות מידע שלוקח קורס תכנות ורוצה להיעזר באינטרנט על מנת לפתור תרגיל תכנות בנושא רקורסיה. בתקופת WEB 1 היה על הסטודנט לשאול את המרצה או את חבריו לכיתה האם הם מכירים אתר אינטרנט שקשור לתכנות או לחפש אתר כזה בספר פיזי. לאחר הגישה לאתר היה עליו לחפש ידנית מידע כללי הקשור לבעיות רקורסיה (מידע כזה יופיע כפי שהוא יופיע בספרים) ולהתאים את המידע הזה לתרגיל שלו בעצמו. בתקופת WEB 2 הסטודנט יוכל לחפש מידע על רקורסיה בגוגל ולקבל אתרים שעוסקים בנושא ולקרוא בעצמו מידע כללי יחסית או לפנות ברשת חברתית למשתמשים אחרים שאולי יוכלו לעזור לו. בתקופת WEB 3, הסטודנט יוכל לפנות למערכת בינה מלאכותית כמו chatGPT, לכתוב ישירות את השאלה שכתובה בעבודה ולקבל תוך שניות תשובה מלאה ומדויקת הממוקדת ספציפית לתרגיל שלו ואף כוללת כבר פתרון ספציפי בתוכה (עם הסברים מפורטים על רקורסיה כמובן).</p></li>
+  </li>
+</ol>
 <br/>
 </section>
 
 <section id="contact" class="section">
+<h1>Contact Me</h1>
+<br/>
+<br/>
+<form action="mailto:yuvsc@post.bgu.ac.il" method="post" enctype="text/plain">
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email"><br><br>
+
+  <label for="message">Message:</label>
+  <textarea id="message" name="message" rows="5" cols="40"></textarea>
+  <select id="smiley" name="smiley" onchange="addEmoji()">
+    <option value="&#x1F600;">&#x1F600;</option>
+    <option value="&#x1F60D;">&#x1F60D;</option>
+    <option value="&#x1F610;">&#x1F610;</option>
+    <option value="&#x1F620;">&#x1F620;</option>
+    <option value="&#x1F622;">&#x1F622;</option>
+    <option value="&#x1F3A4;">&#x1F3A4;</option>
+    <option value="&#x1F3B5;">&#x1F3B5;</option>
+  </select><br><br>
+
+  <input type="submit" value="Send">
+</form>
+
+<script>
+  function addEmoji() {
+    const emojiSelect = document.getElementById("smiley");
+    const messageTextarea = document.getElementById("message");
+    const emoji = emojiSelect.options[emojiSelect.selectedIndex].innerHTML;
+
+    messageTextarea.value += emoji;
+  }
+</script>
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-contact me
 <br/>
 <br/>
 <br/>
