fix content and email problems before submiting assignment

--- a/index.html
+++ b/index.html
@@ -21,21 +21,7 @@
 <br/>
 <br/>
 <h1>About Me</h1>
-<p>אריאל זילבר (נולד ב-22 בספטמבר 1943; כ"ב באלול תש"ג) הוא פרופורמר ענק, מלחין ופזמונאי ישראלי.
-  זילבר נולד בתל אביב לזמרת ברכה צפירה ולכנר התזמורת הפילהרמונית הישראלית בן עמי זילבר (בנו של הצייר אריה זילבר, ושרה זילבר ממייסדי תל אביב). גדל כילד חוץ בקיבוץ גן שמואל ובנעוריו למד בפנימיית "הדסים".
-  
-  בשנת 1967 נדד בין אנגליה לצרפת, בהופעותיו הראשונות היה החימום של מייק בראנט באולמפיה יחד עם חיים רומנו שמאוחר יותר יעבוד איתו על האלבום האגדי רוצי שמוליק. בראשית שנות ה-70 שהה זילבר לסירוגין בישראל ובצרפת כשהוא כותב למבצעים שונים.
-  
-  בישראל כתב עבור הגשש החיוור, תיקי דיין, אילנה רובינא ואחרים, ובצרפת עבור פרנסואז הרדי. באנגליה ביצעו מיצירותיו צמד העופרים.
-  
-  בשנת 1971 הקליט תקליטון בכורה בצרפת ובו שני שירים: "Movie instead" ו-"When it's time". התקליטון שהיה בשפה האנגלית ,לא זכה לפריצה המיוחלת בצרפת, אך "Movie instead", שהיה שיר רוק פרוע ביחס למקובל בישראל, זכה להצלחה במצעד הפזמונים הלועזיים בישראל. הצלחה שאריאל לא ידע עליה כלל, כשנחת בארץ לביקור מולדת, הופתע לגלות כי בנמל התעופה חיכתה לו עדת מעריצות.
-  
-  בשנת 1973 שב לישראל לצמיתות, אחרי שגנז את הרעיון להקליט את האלבום הראשון שלו בצרפת. אריאל זילבר המשיך לנדוד אך רק ברחבי ארץ ישראל. כששב לארץ התגורר בתל אביב משם עבר לנס ציונה שם פגש את שימי תבורי רגע לפני הפריצה הגדולה שלו, משם עבר להתגורר בהוד השרון, רעננה, שוב תל אביב, מתת בגליל המערבי, תל אביב ושוב מתת, אלי סיני, מתת מעלות, מתת נהריה ולאחרונה עבר למושב גיתית בבקעת הירדן.
-  
-  התנועתיות הרבה ניכרת גם ביצירתו העניפה. בשנת 1974 הקים את להקת תמוז בתחילה עם מתי כספי, שויתר על הרעיון ובסופו של יום הלהקה הוקמה כשחברים בה אריאל זילבר, שלום חנוך, איתן גדרון, יהודה אדר ומאיר ישראל.
-  שירי הלהקה היוו אבני היסוד של הרוק הישראלי – "הולך בטל", "ככה את רצית אותי", " סוף עונת התפוזים", "פנס הרחוב", "אהבה שקטה".
-  
-  בשנת 1976, להקת תמוז התפרקה, זילבר יצא למסע הופעות בעקבות הצלחה עצומה של התקליט "רוצי שמוליק", אלבומו הראשון, שנמכר בעשרות אלפי עותקים, ארוע שלא התרחש לפני ואחרי במהלך שנים רבות.</p>
+<p>אריאל זילבר (נולד ב-22 בספטמבר 1943; כ"ב באלול תש"ג) הוא זמר, מלחין ופזמונאי ישראלי. זילבר נולד בתל אביב לזמרת ברכה צפירה ולכנר התזמורת הפילהרמונית הישראלית בן עמי זילבר. גדל כילד חוץ בקיבוץ גן שמואל ובנעוריו למד בפנימיית "הדסים". לאחר פעילותו בלהקת הרוק החלוצית "תמוז", ניהל קריירת סולו מגוונת במסגרתה יצר שירים עבריים בסגנונות רוק, פופ, היפ הופ, מוזיקה ערבית ומוזיקה אתיופית. זילבר מתגורר ביישוב גיתית בבקעת הירדן ונשוי בשנית, לשושנה (בתו של שלמה קאלו) מ-1984, ויש לו שלושה ילדים ממנה. מאשתו הראשונה, מאירה, יש לו בן אחד. בשנת 2014 הוענק לו פרס אקו"ם על תרומתו למוזיקה וב-2016 פרס אמ"י על מפעל חיים. במהלך העשור הראשון של המאה ה-21 היה פעיל במחאה נגד תוכנית ההתנתקות ובאותם ימים גם חזר בתשובה והפך לחסיד חב"ד המזוהה עם הזרם המשיחיסטי.</p>
 </section>
 
 
@@ -97,12 +83,19 @@
 <ol>
   <li>
     <ol type="i">
-      <p id="firstquestion"><strong>שלושה הבדלים עיקריים בין תקופות ה-WEB השונות:</strong></p>
-      <li><p><strong>דינאמיות:</strong> WEB 1 הציג אתרים סטטיים בעלי יכולות עיבוד נמוכות, בתור משתמש לא היה ניתן ליצור אינטראקציה ולקבל תגובה, עודכנו לעיתים רחוקות. WEB 2 הביאה עימה טכנולוגיות עיבוד מידע מתקדמות יותר ואפשרה דינאמיות מסוימת באתרים. בתקופת WEB 3 ישנו שימוש בעיבוד נתוני עתק, שימוש בטכנולוגיות בינה מלאכותית ו-IoT ובכך מאפשרת גמישות והתאמה אישית של אפליקציות ושירותים למשתמש שמתעדכנת ומשתפרת כל הזמן.</p></li>
-      <li><p><strong>ביזור:</strong> בתקופת WEB 1 מערכת האינטרנט הוחזקה ורוכזה על ידי מספר מועט של תאגידים וארגונים ששלטו על התוכן שלה. WEB 2 הביאה איתה את הקונספט של מרחב שיתופי וחברתי באמצעות יצירה והפצה של תוכן על ידי המשתמשים עצמם. WEB 3 ממשיכה ומפתחת את הרעיון שמרחב האינטרנט שייך למשתמשים עצמם – תקופה זו מדברת על נגישות מקסימלית לאפליקציות ושירותים הניתנים באמצעות טכנולוגיות ביזור בין משתמשים וחברות כמו Cloud למשל.</p></li>
-      <li><p><strong>חיפוש באינטרנט:</strong> בתקופת WEB 1 לא היו טכנולוגיות כמו מנועי חיפוש ועיבוד שפה, היה צורך להכיר אתר ספציפי ולגשת אליו ישירות דרך ה-URL שלו. בתקופת WEB 2 התחילו להתקיים טכנולוגיות חיפוש מידע באתרים כמו Google אך החיפוש נעשה ברמה נמוכה ולא מקיפה – היה אפשר לחפש מילים ותוכן ספציפי שחייב שיופיע באתרים אך לא לקבל תשובות קונקרטיות וקונטקסטים. בתקופת WEB 3 כבר מדובר בחיפוש מידע מאוד ממוקד ויעיל מבחינת תוכן – טכנולוגיות בינה מלאכותית ו-NLP מציגות את התוצאות הטובות והנכונות ביותר ברשת לאחר שעברו עיבודים ומיקודים.</p></li>   
+      <p id="firstquestion"><strong>שלושה הבדלים בין תקופות ה-WEB השונות:</strong></p>
+      <li><p><strong>חווית משתמש:</strong> Web 1 היה בעיקר ערוץ תקשורת חד-כיווני שבו משתמשים צרכו מידע באופן פסיבי, בעוד ש-Web 2 הציג תוכן שנוצר על ידי משתמשים ויישומי אינטרנט אינטראקטיביים שסיפקו חווית משתמש מרתקת יותר. Web 3 שהביא איתו מימד סמנטי, שואף לספק חווית משתמש מותאמת אישית וחכמה יותר על ידי שימוש בבינה מלאכותית ולמידת מכונה כדי לצפות מראש ולהבין טוב יותר את צרכי המשתמש.</p></li>
+      <li><p><strong>טכנולוגיה:</strong> Web 1 נבנה באמצעות HTML בסיסי והיה מוגבל מבחינת פונקציונליות ואינטראקטיביות. Web 2 הציג טכנולוגיות חדשות כמו Ajax, RSS וממשקי API שאפשרו אתרים דינמיים ותגובתיים יותר. Web 3 צפוי להביא טכנולוגיות מתקדמות עוד יותר כמו blockchain, IoT ובינה מלאכותית, שיאפשרו צורות חדשות של שיתוף נתונים, יישומים מבוזרים ואוטומציה חכמה.</p></li>
+      <li><p><strong>חיפוש באינטרנט:</strong> WEB 1 לא אפשר חיפוש אתרים/תוכן, היה צורך להכיר אתר ספציפי ולגשת אליו ישירות דרך ה-URL שלו. בתקופת WEB 2 התחילו להתקיים טכנולוגיות חיפוש מידע באתרים כמו Google אך החיפוש נעשה ברמה נמוכה ולא מקיפה – היה אפשר לחפש מילים ותוכן ספציפי שחייב שיופיע באתרים אך לא לקבל תשובות קונקרטיות וקונטקסטים. חיפוש תוכן ב-Web 3 הוא חיפוש מידע מאוד ממוקד ויעיל – טכנולוגיות בינה מלאכותית ו-NLP מציגות את התוצאות הטובות והנכונות ביותר ברשת לאחר שעברו עיבודים ומיקודים (בזמן מינימלי כמובן).</p></li>   
     </ol>
-    <li><p><strong>דוגמא לתרחיש שימוש הממחיש את ההבדל בין התקופות:</strong> סטודנט להנדסת מערכות מידע שלוקח קורס תכנות ורוצה להיעזר באינטרנט על מנת לפתור תרגיל תכנות בנושא רקורסיה. בתקופת WEB 1 היה על הסטודנט לשאול את המרצה או את חבריו לכיתה האם הם מכירים אתר אינטרנט שקשור לתכנות או לחפש אתר כזה בספר פיזי. לאחר הגישה לאתר היה עליו לחפש ידנית מידע כללי הקשור לבעיות רקורסיה (מידע כזה יופיע כפי שהוא יופיע בספרים) ולהתאים את המידע הזה לתרגיל שלו בעצמו. בתקופת WEB 2 הסטודנט יוכל לחפש מידע על רקורסיה בגוגל ולקבל אתרים שעוסקים בנושא ולקרוא בעצמו מידע כללי יחסית או לפנות ברשת חברתית למשתמשים אחרים שאולי יוכלו לעזור לו. בתקופת WEB 3, הסטודנט יוכל לפנות למערכת בינה מלאכותית כמו chatGPT, לכתוב ישירות את השאלה שכתובה בעבודה ולקבל תוך שניות תשובה מלאה ומדויקת הממוקדת ספציפית לתרגיל שלו ואף כוללת כבר פתרון ספציפי בתוכה (עם הסברים מפורטים על רקורסיה כמובן).</p></li>
+  </li>
+  <li>
+    <ol type="i">
+      <p id="secondquestion"><strong>דוגמאות לתרחישי שימוש הממחישים את ההבדלים בין התקופות:</strong></p>
+      <li><p><strong>חווית משתמש:</strong> חנות נעליים – ב-Web 1 חנות כזו תהיה דף אינטרנט סטטי שכל תפקידו הוא להציג מידע אודות החנות ומוצריה, לא ניתן ליצור איתה קשר או לבצע רכישה באופן וירטואלי אלא יש צורך להתקשר או להגיע אליה פיזית. בתקופת Web 2 חנות כזו תהיה אתר אינטרנט בעל ממשק משתמש גנרי, בו ניתן לגלוש בין מוצרים או לסננם על פי מידע כללי כמו צבע וגודל, למלא טופס יצירת קשר ולבצע רכישות בטכנולוגיות יחסית פשוטות ולא מאובטחות. ב-Web 3, הודות לטכנולוגיות בינה מלאכותית, blockchain ואבטחה, חנות כזו תספק חווית שירות וקנייה ותחושת אמינות ובטיחות ברמה מקסימלית. הלקוח יוכל לקבל המלצות למוצרים שמתאימים במיוחד בשבילו, למדוד מוצרים וירטואלית, להיעזר בשירות לקוחות באמצעות צ'אטבוטים ולשלם בקלות ובמהירות.</p></li>
+      <li><p><strong>טכנולוגיה:</strong> פלטפורמת מדיה חברתית לשיתוף חדשות טכנולוגיות - Web 1: אתר סטטי המציג מידע על חדשות טכנולוגיות ואולי קישורים לאתרים אחרים בנושא אך אינו מאפשר אינטראקציה או שיתוף של משתמשים. Web 2: אתר אינטרנט אינטראקטיבי המאפשר למשתמשים ליצור פרופילים, לעקוב אחר משתמשים אחרים ולשתף חדשות טכנולוגיות עם אחרים. משתמשים יכולים ליצור תוכן, להגיב לתוכן של משתמשים אחרים, ליצור ולהצטרף לקהילות מקוונות ועוד. Web 3: רשת חברתית מבוזרת הממנפת טכנולוגיות מתקדמות כגון blockchain ו-web מבוזר כדי לספק פלטפורמת מדיה חברתית מאובטחת, שקופה ומותאמת אישית לשיתוף חדשות טכנולוגיות. יש בקרה על אמינות המידע ולמשתמשים יש יותר שליטה ובעלות על הנתונים והפרטיות שלהם, יכולים לזכות בפרסים או אסימונים על שיתוף תוכן באיכות גבוהה, וייתכן שתהיה להם גישה לתכונות מתקדמות כגון ממשקי מציאות מדומה או חוויות סוחפות.</p></li>
+      <li><p><strong>חיפוש באינטרנט:</strong> סטודנט להנדסת מערכות מידע שלוקח קורס תכנות ורוצה להיעזר באינטרנט על מנת לפתור תרגיל תכנות בנושא רקורסיה. בתקופת WEB 1 היה על הסטודנט לשאול את המרצה או את חבריו לכיתה האם הם מכירים אתר אינטרנט שקשור לתכנות או לחפש אתר כזה בספר פיזי. לאחר הגישה לאתר היה עליו לחפש ידנית מידע כללי הקשור לבעיות רקורסיה (מידע כזה יופיע כפי שהוא יופיע בספרים) ולהתאים את המידע הזה לתרגיל שלו בעצמו. בתקופת WEB 2 הסטודנט יוכל לחפש מידע על רקורסיה בגוגל ולקבל אתרים שעוסקים בנושא ולקרוא בעצמו מידע כללי יחסית או לפנות ברשת חברתית למשתמשים אחרים שאולי יוכלו לעזור לו. בתקופת WEB 3, הסטודנט יוכל לפנות למערכת בינה מלאכותית כמו chatGPT, לכתוב ישירות את השאלה שכתובה בעבודה ולקבל תוך שניות תשובה מלאה ומדויקת הממוקדת ספציפית לתרגיל שלו ואף כוללת כבר פתרון ספציפי בתוכה (עם הסברים מפורטים על רקורסיה כמובן).</p></li>
+    </ol>
   </li>
 </ol>
 <br/>
@@ -112,10 +105,9 @@
 <h1>Contact Me</h1>
 <br/>
 <br/>
-<form action="mailto:yuvsc@post.bgu.ac.il" method="post" enctype="text/plain">
-
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email"><br><br>
+<form>
+  <label for="subject">Subject:</label>
+  <input type="subject" id="subject" name="subject"><br><br>
 
   <label for="message">Message:</label>
   <textarea id="message" name="message" rows="5" cols="40"></textarea>
@@ -129,7 +121,7 @@
     <option value="&#x1F3B5;">&#x1F3B5;</option>
   </select><br><br>
 
-  <input type="submit" value="Send">
+  <input type="submit" value="Send" onclick="sendEmail()">
 </form>
 
 <script>
@@ -140,7 +132,15 @@
 
     messageTextarea.value += emoji;
   }
+
+  function sendEmail() {
+    const subject = document.getElementById("subject").value;
+    const message = document.getElementById("message").value;
+    const mailtoUrl = "mailto:yuvsc@post.bgu.ac.il" + "?subject=" + encodeURIComponent(subject) + "&body=" + encodeURIComponent(message);
+    window.location.href = mailtoUrl;
+  }
 </script>
+
 <br/>
 <br/>
 <br/>
