fixing email sending button problem

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <option value="&#x1F3B5;">&#x1F3B5;</option>
   </select><br><br>
 
-  <input type="submit" value="Send" onclick="sendEmail()">
+  <input type="button" value="Send" onclick="sendEmail()">
 </form>
 
 <script>
